# shell_corp

./: .gitignore  ARCHITECTURE.md  MIGRATION.md  Makefile  PREFACE.md  README.md  UNIQUE_KEY.md  pyproject.toml  test_comparison.py
src/clients/: duckdb.py
src/legacy/: derived_a.py  derived_a.sql  derived_b.py  derived_c.py  run_all.py
src/loader/: constants.py  main.py  models.py  utils.py
src/migration_test/: README.md  main.py  models.py
src/migration_test/comparison_results/: migration_test_results_test_results.csv
src/migration_test/comparison_results/failed/: migration_test_results_test_results.csv
src/migration_test/utils/: comparison.py  failed_models.py  results.py
src/migration_test/utils/comparison_results/: migration_test_results_test_results.csv
src/migration_test/utils/comparison_results/failed/: migration_test_results_test_results.csv
src/sqlmesh/: config.py
src/sqlmesh/audits/staging/transfer_analysis/: assert_transfer_analysis_quality.sql  assert_valid_age_range.sql  assert_valid_contract_dates.sql  assert_valid_market_values.sql  assert_valid_transfer_status.sql
src/sqlmesh/models/: example.sql
src/sqlmesh/models/audits/: transfer_analysis_audit.sql
src/sqlmesh/models/prod/: derived_a.sql  derived_b.sql  derived_c.py
src/sqlmesh/models/staging/: transfer_analysis.sql
src/sqlmesh/tests/: test_derived_c.yaml  test_transfer_analysis.yaml
src/utils/: __init__.py  pandas.py
tests/loader/: test_flatten_fbref_pd_dataframe.py  test_transform_player_data.py
tests/loader/utils/: test_generate_synthetic_columns.py  test_transform_player_data.py
tests/migration_test/utils/: test_compare_duckdb_tables.py
tests/utils/: test_flatten_pd_dataframe.py
tests/utils/pandas/: test_flatten_pd_dataframe.py
