[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shell_corp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "dlt[duckdb]>=1.4.1",
    "sqlmesh>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13",
    "ruff",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.ruff.lint]
ignore = ["E402", "E712"]
select = ['I001', "E4", "E7", "E9", "F"]

[tool.ruff.lint.isort]
known-first-party = ["shell_corp"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.coverage.run]
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true

[tool.sqlmesh]
paths = ["src/sqlmesh"]

