[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "dlt[duckdb]>=1.4.1",
    "patito",
    "polars",
    "pyarrow",
    "sqlmesh[duckdb]>=0.38.0",
    "soccerdata>=1.0.0",
    "pandas-stubs",
    "types-PyYAML",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.ruff.lint]
# Ignore E402: Module level import not at top of file
ignore = ["E402", "E712"]
select = [
    'I001',    # isort
    "E4",      # pycodestyle errors
    "E7",      # pycodestyle errors
    "E9",      # pycodestyle errors
    "F",       # pyflakes
    "F401",    # unused imports
    "F403",    # star imports usage
    "F405",    # star imports usage
    "F821",    # undefined names
    "UP",      # pyupgrade (modernize Python code)
    "RUF"      # ruff-specific rules
]

# Add format settings to ensure formatting works
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["loader"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.coverage.run]
parallel = true
omit = [
    "tests/*",
    "*/test_*.py",
    ".venv/*",
]
source = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "src.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true

[tool.sqlmesh]
paths = ["src/sqlmesh"]

